Revert Presto changes